added new recipe

--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-        <title>Odin-Recipes-Site</title>
+        <title>Min kokbok</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Recept</h1>
+    
     <ul>
-    <a href="recipes/lasagna.html">Lasagna</a>
+    <li><a href="recipes/lasagna.html">Lasagna</a></li>
+    <li><a href="recipes/snickerstårta.html">snickerstårta</a></li>
     
 
 
