--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,11 +3,12 @@
 <head>
 
     <meta charset="UTF-8">
-<h1>Lasagna</h1>
 </head>
 
 <body>
-    <img src="../recipes/Lasagna.jpg">
+    <h1>Lasagna</h1>
+
+    <img src="../recipes/images/Lasagna.jpg">
     <h2>Description</h2>
     <p>Its a Lasagna recipe that made the italians cry</p>
     <h3>Ingredients</h3>
