--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Recept</h1>
-    
+    <img src="./recipes/images/CookBook.jpg"
     <ul>
     <li><a href="recipes/lasagna.html">Lasagna</a></li>
     <li><a href="recipes/snickerstårta.html">snickerstårta</a></li>
